Emit OrientationSensor::availableChanged() when needed

when we get the signal from QtSensors that the rotation sensor
became available, forward the signal so that the QML part can show the
autorotation checkbox

BUG:488764


(cherry picked from commit 7723a604662c83f10e3db90c4130b2fd3b461c82)

bddbbfc6 Emit availableChanged() when needed

Co-authored-by: Marco Martin <notmart@gmail.com>